tests/ui/parser/issues/issue-72253.stderr
error: expected expression, found `,`
  --> $DIR/issue-72253.rs:4:9
   |
LL |         ,arg("2")
   |         ^ expected expression

error: aborting due to 1 previous error

